--- a/src/components/Catalogo.css
+++ b/src/components/Catalogo.css
@@ -9,8 +9,8 @@
 }
 
 .titulo-imagen {
-  width: auto;
-  max-width: 550px;
+  width: 100%;
+  max-width: 1500px;
   height: auto;
   display: block;
   margin: 0 auto 1rem auto;
