--- a/src/components/Catalogo.css
+++ b/src/components/Catalogo.css
@@ -5,8 +5,8 @@
 }
 
 .catalogo-titulo-img {
-  width: 70%; /* Se redujo en un 30% como pediste */
-  max-width: 700px;
+  width: 85%;
+  max-width: 850px;
   height: auto;
   margin-bottom: 10px;
 }
@@ -35,7 +35,7 @@
 }
 
 .producto-imagen {
-  width: 240px;
+  width: 220px;
   height: auto;
   object-fit: contain;
   margin-bottom: 15px;
