--- a/src/components/Catalogo.css
+++ b/src/components/Catalogo.css
@@ -46,6 +46,14 @@
   margin-bottom: 15px;
 }
 
+/* ✅ Solo para el Suavizante Suave */
+.producto-imagen.suavizante-ajustada {
+  width: 120px;
+  height: 120px;
+  object-fit: contain;
+  margin-bottom: 15px;
+}
+
 .precio-rojo {
   color: red;
   font-weight: bold;
