--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,10 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+/* Contenedor centrado reutilizable */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
